apps/loki/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loki
  labels:
    app.kubernetes.io/name: loki
    app.kubernetes.io/part-of: loki
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
