apps/loki/base/networkpolicy-default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: loki
spec:
  podSelector: {}
  policyTypes:
    - Ingress
